--- a/index.html
+++ b/index.html
@@ -3,11 +3,95 @@
 <head>
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BrAnimes</title>
+    <link rel="shortcut icon" href="img/icone.png" type="image/x-icon">
 </head>
 <body>
     
-    <h1>BrAnimes teste</h1>
+   <header>
+       <div>
+           <section>
+               <img src="img/logo.png">
+           </section>
+           <section>
+               <p>Seus mehlores animes em um único lugar</p>
+               <nav>
+                   <a href="index.html">Home</a>
+                   <a href="programacao.html">Programacao</a>
+                   <a href="galeria.html">Galeria de animes</a>
+                   <a href="planos.html">Plano plus</a>
+                   <a href="contato.html">Contato</a>
+               </nav>
+           </section>
+       </div>
+   </header>
+   <main>
+       <section>
+           <p>Os melhores Animes</p>
+           <p>
+            Aproveite milhares de episódios legendados e exclusivamente dublados de 
+            animes selecionados, além de filmes, animes clássicos e as últimas novidades 
+            do Japão.
+           </p>
+           <a href="#">Assistir online</a>
+       </section>
+       <section>
+           <h3>Novas Dublagens</h3>
+           <div>
+               <figure>
+                   <img src="img/Demon Slayer.jpg">
+                   <figcaption>Demon Sla</figcaption>
+               </figure>
+               <figure>
+                <img src="img/AttackOnTitan.jpg">
+                <figcaption>Attack on Titan</figcaption>
+            </figure>
+            <figure>
+                <img src="img/My Hero Academia.jpg">
+                <figcaption>My Hero Academia</figcaption>
+            </figure>
+            <figure>
+                <img src="img/Fairy Tail.jpg">
+                <figcaption>Fairy Tail</figcaption>
+            </figure>
+           </div>
+       </section>
+       <section>
+        <h3>TOP 10</h3>
+        <div>
+            <figure>
+                <img src="img/My Hero Academia.jpg">
+                <figcaption>My Hero Academia</figcaption>
+            </figure>
+            <figure>
+             <img src="img/dragonballz.jpg">
+             <figcaption>Dragon Ball Z</figcaption>
+         </figure>
+         <figure>
+             <img src="img/naruto.jpg">
+             <figcaption>Naruto</figcaption>
+         </figure>
+         <figure>
+             <img src="img/onepiece.jpg">
+             <figcaption>One Piece</figcaption>
+         </figure>
+        </div>
+    </section>
+
+   </main>
+   <footer>
+       <div>
+           <nav>
+            <a href="sobre.html">Sobre nós</a>
+            <a href="suporte.html">Suporte ao cliente</a>
+            <a href="termos.html">Termos de uso</a>
+            <a href="politicas.html">Politicas de privacidade</a>
+           </nav>
+           <p>
+               &copy; 2020-21 BrAnimes Produções. Todos os direitos reservados
+           </p>
+       </div>
+   </footer>
 
 </body>
 </html>
